--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Arnab Pal",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
     "firebase": "^10.12.1",
     "next": "^14.2.3",
+    "postcss": "^8.4.38",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwindcss": "^3.4.3"
   }
 }
