--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,6 @@
-/node_modules
-/.pnp
-.pnp.js
+# Ignore the .env file
+.env
 
-# testing
-/coverage
-
-# next.js
+# Other files and directories to ignore
+node_modules/
 /.next/
-/out/
-
-# production
-/build
-
-# misc
-.DS_Store
-*.pem
-
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-.pnpm-debug.log*
-
-# local env files
-.env*.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
